--- a/.github/workflows/cd-infra.yaml
+++ b/.github/workflows/cd-infra.yaml
@@ -1,4 +1,4 @@
-name: Deploy Infra AWS (Unified Root Module)
+name: Deploy Infra AWS (Unified Root Module - 2 Fases)
 
 on:
   push:
@@ -15,10 +15,13 @@ env:
   CLUSTER_NAME: nextime-frame-cluster
 
 jobs:
-  terraform-apply:
-    name: Deploy - Infraestrutura Completa
+  # =============================================================================
+  # FASE 1: Deploy do Cluster (sem bootstrap)
+  # =============================================================================
+  deploy-cluster:
+    name: Deploy - Fase 1 (Cluster)
     runs-on: ubuntu-latest
-    environment: production  # Proteção adicional para deploy em prod
+    environment: production
 
     steps:
       - name: Checkout código
@@ -28,7 +31,58 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-          terraform_wrapper: false  # Para obter outputs limpos
+          terraform_wrapper: false
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Terraform Init
+        run: terraform init -upgrade
+
+      - name: Terraform Plan - Fase 1 (Cluster apenas)
+        run: |
+          terraform plan \
+            -var-file=terraform.tfvars \
+            -var="enable_bootstrap_addons=false" \
+            -out=tfplan-fase1
+
+      - name: Terraform Apply - Fase 1 (Cluster)
+        id: apply_cluster
+        run: |
+          terraform apply -auto-approve tfplan-fase1
+          echo "cluster_created=true" >> $GITHUB_OUTPUT
+
+      - name: Verificar Cluster Criado
+        if: steps.apply_cluster.outputs.cluster_created == 'true'
+        run: |
+          echo "## ✅ Fase 1 Concluída" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Cluster EKS criado com sucesso!" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Cluster**: ${{ env.CLUSTER_NAME }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Região**: ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
+
+  # =============================================================================
+  # FASE 2: Deploy do Bootstrap (addons)
+  # =============================================================================
+  deploy-bootstrap:
+    name: Deploy - Fase 2 (Bootstrap)
+    runs-on: ubuntu-latest
+    needs: deploy-cluster
+    environment: production
+
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
+          terraform_wrapper: false
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
@@ -39,39 +93,35 @@ jobs:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-action-role
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Terraform Format Check
-        run: terraform fmt -check -recursive || true
-
-      - name: Terraform Init
-        run: terraform init -upgrade
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Terraform Plan
-        run: terraform plan -var-file=terraform.tfvars -out=tfplan
-
-      - name: Terraform Apply
-        id: apply
-        run: |
-          terraform apply -auto-approve tfplan
-          echo "apply_success=true" >> $GITHUB_OUTPUT
-
-      - name: Configure kubectl (após cluster ser criado)
-        if: steps.apply.outputs.apply_success == 'true'
+      - name: Configure kubectl
         run: |
           aws eks update-kubeconfig \
             --name ${{ env.CLUSTER_NAME }} \
             --region ${{ env.AWS_REGION }}
 
       - name: Aguardar cluster ficar pronto
-        if: steps.apply.outputs.apply_success == 'true'
         run: |
           echo "Aguardando nodes ficarem prontos..."
           kubectl wait --for=condition=Ready nodes --all --timeout=600s || true
 
+      - name: Terraform Init
+        run: terraform init -upgrade
+
+      - name: Terraform Plan - Fase 2 (Com Bootstrap)
+        run: |
+          terraform plan \
+            -var-file=terraform.tfvars \
+            -var="enable_bootstrap_addons=true" \
+            -out=tfplan-fase2
+
+      - name: Terraform Apply - Fase 2 (Bootstrap)
+        id: apply_bootstrap
+        run: |
+          terraform apply -auto-approve tfplan-fase2
+          echo "bootstrap_created=true" >> $GITHUB_OUTPUT
+
       - name: Verificar estado do cluster
-        if: steps.apply.outputs.apply_success == 'true'
+        if: steps.apply_bootstrap.outputs.bootstrap_created == 'true'
         run: |
           echo "## 🎯 Verificação do Cluster" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -84,66 +134,27 @@ jobs:
           kubectl get pods -A >> $GITHUB_STEP_SUMMARY || echo "Erro ao obter pods" >> $GITHUB_STEP_SUMMARY
 
       - name: Verificar Addons Core
-        if: steps.apply.outputs.apply_success == 'true'
+        if: steps.apply_bootstrap.outputs.bootstrap_created == 'true'
         run: |
           echo "## 📦 Addons Core" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          # ArgoCD
           echo "### ArgoCD" >> $GITHUB_STEP_SUMMARY
           kubectl get pods -n argocd >> $GITHUB_STEP_SUMMARY || echo "ArgoCD não encontrado" >> $GITHUB_STEP_SUMMARY
           
-          # External Secrets
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### External Secrets" >> $GITHUB_STEP_SUMMARY
           kubectl get pods -n external-secrets >> $GITHUB_STEP_SUMMARY || echo "External Secrets não encontrado" >> $GITHUB_STEP_SUMMARY
-          
-          # AWS Load Balancer Controller
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### AWS Load Balancer Controller" >> $GITHUB_STEP_SUMMARY
-          kubectl get pods -n kube-system -l app.kubernetes.io/name=aws-load-balancer-controller >> $GITHUB_STEP_SUMMARY || echo "LB Controller não encontrado" >> $GITHUB_STEP_SUMMARY
-
-      - name: Verificar Addons Adicionais
-        if: steps.apply.outputs.apply_success == 'true'
-        run: |
-          echo "## 🔧 Addons Adicionais" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          # Datadog
-          echo "### Datadog" >> $GITHUB_STEP_SUMMARY
-          kubectl get pods -n default -l app=datadog >> $GITHUB_STEP_SUMMARY || echo "Datadog não encontrado" >> $GITHUB_STEP_SUMMARY
-          
-          # ClusterSecretStore
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### ClusterSecretStore" >> $GITHUB_STEP_SUMMARY
-          kubectl get clustersecretstore >> $GITHUB_STEP_SUMMARY || echo "ClusterSecretStore não encontrado" >> $GITHUB_STEP_SUMMARY
-
-      - name: Obter Terraform Outputs
-        if: steps.apply.outputs.apply_success == 'true'
-        run: |
-          echo "## 📤 Terraform Outputs" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          terraform output >> $GITHUB_STEP_SUMMARY || echo "Erro ao obter outputs" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
       - name: Deploy Summary
-        if: steps.apply.outputs.apply_success == 'true'
+        if: steps.apply_bootstrap.outputs.bootstrap_created == 'true'
         run: |
-          echo "## 🎉 Deploy Concluído com Sucesso!" >> $GITHUB_STEP_SUMMARY
+          echo "## 🎉 Deploy Completo Concluído!" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ **Cluster EKS**: ${{ env.CLUSTER_NAME }}" >> $GITHUB_STEP_SUMMARY
-          echo "✅ **Região**: ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
-          echo "✅ **Backend State**: s3://nextime-frame-state-bucket/infra-kubernetes/infra.tfstate" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Fase 1**: Cluster EKS criado" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Fase 2**: Bootstrap addons instalados" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "📦 **Módulos implantados**:" >> $GITHUB_STEP_SUMMARY
           echo "- ✅ module.cluster - EKS Cluster" >> $GITHUB_STEP_SUMMARY
           echo "- ✅ module.bootstrap_core - IRSA + Addons Core" >> $GITHUB_STEP_SUMMARY
           echo "- ✅ module.bootstrap_addons - Datadog + Secrets" >> $GITHUB_STEP_SUMMARY
-
-      - name: Notificar falha
-        if: failure()
-        run: |
-          echo "## ❌ Deploy Falhou" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Verifique os logs acima para detalhes do erro." >> $GITHUB_STEP_SUMMARY
